--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">
 </head>
 <body>
+    <a href="/" class="home">Home</a>
     <nav>
         <div class="icon nav-icon-3">
         <span></span>
@@ -23,7 +24,6 @@
             <a href="/school"><li>School</li></a>
             <a href="/hype"><li>Hype</li></a>
          </ul>
-
     </nav>
     <div class="container">
         <h1>Your motivational quote for today:</h1>
