--- a/views/school.ejs
+++ b/views/school.ejs
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">
 </head>
 <body>
+    <a href="/" class="home">Home</a>
     <nav>
         <div class="icon nav-icon-3">
         <span></span>
@@ -20,7 +21,7 @@
          <ul class="hidden" >
             <a href="/fitness"><li>Fitness</li></a>
             <a href="/work"><li>Work</li></a>
-            <a href="/school"><li>School</li></a>
+            <a href="/school"><li class="selected">School</li></a>
             <a href="/hype"><li>Hype</li></a>
          </ul>
 
