get rid of hamburger menu, contain bg image

--- a/views/hype.ejs
+++ b/views/hype.ejs
@@ -11,14 +11,9 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">
 </head>
 <body>
-    <a href="/" class="home">Home</a>
     <nav>
-        <div class="icon nav-icon-3">
-        <span></span>
-        <span></span>
-        <span></span>
-         </div>
-         <ul class="hidden" >
+         <ul>
+            <a href="/"><li>General</li></a>
             <a href="/fitness"><li>Fitness</li></a>
             <a href="/work"><li>Work</li></a>
             <a href="/school"><li>School</li></a>
@@ -27,7 +22,7 @@
 
     </nav>
     <div class="container">
-        <h1>Your motivational quote for today:</h1>
+        <h1>HYPE</h1>
         <div id="quote">
             <p class = "quote hide"><%= info[0].quote %></p>
             <span class = "name hide"><%= info[0].author %></span>
