--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,14 +11,9 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">
 </head>
 <body>
-    <a href="/" class="home">Home</a>
     <nav>
-        <div class="icon nav-icon-3">
-        <span></span>
-        <span></span>
-        <span></span>
-         </div>
-         <ul class="hidden" >
+         <ul >
+            <a href="/"><li class="selected">General</li></a>
             <a href="/fitness"><li>Fitness</li></a>
             <a href="/work"><li>Work</li></a>
             <a href="/school"><li>School</li></a>
