added body classes

--- a/views/fitness.ejs
+++ b/views/fitness.ejs
@@ -11,7 +11,7 @@
     <title>Full Stack App</title>
     <link rel="icon" type="image/png" href="/images/favicon.png">
 </head>
-<body>
+<body class="fitness">
     <nav>
          <ul>
             <a href="/"><li>General</li></a>
