--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
         <h1>Your motivational quote for today:</h1>
         <div id="quote">
             <p class = "quote hide"><%= info[0].quote %></p>
-            <span class = "name hide"><%= info[0].author %></span>
+            <p class = "name hide"><%= info[0].author %></p>
         </div>
         <button id="main">Go Get</button>
     </div>
